--- a/src/pug/_includes/_head/_head.pug
+++ b/src/pug/_includes/_head/_head.pug
@@ -7,8 +7,6 @@ head(prefix="og: http://ogp.me/ns#")
 	meta(name="keywords" content="")
 	meta(name="robots" content="INDEX,FOLLOW")
 	link(rel="icon" href="/favicon/favicon.ico" type="image/x-icon")
-	//-подклчить критические стили
-	//- link(rel='stylesheet' type='text/css' href='css/main.critical.css')
-	style
-		include ../../../../build/css/main.critical.css
+	//- style
+	//- 	include ../../../../build/css/main.critical.css
 	link(rel='stylesheet' type='text/css' href='css/main.css')
